# ToDCL

./: CL_learner.py  project_funcs.py  pyproject.toml  requirements.txt  test.py  train.py
data/: download.sh
utils/: dataloader.py
