[tool.poetry]
name = "ToDCL"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
adapter-transformers = "3.0.0"
aiohttp = "3.8.1"
dictdiffer = "0.9.0"
pytorch-lightning = "1.5.4"
tabulate = "0.8.9"
termcolor = "1.1.0"
sentencepiece = "0.1.96"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
